--- a/src/scss/facades/_global.scss
+++ b/src/scss/facades/_global.scss
@@ -36,6 +36,10 @@ table.striped{
 	@include striped-table;
 }
 
+table.compressed{
+	@include compressed-table;
+}
+
 div.tabbed{
 	@include tabbed;
 	.tab-navigation, .pill-navigation{
